@@ -3,6 +3,8 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Fixed a bug which caused some memory leaks when memory allocation failed
+  during the update of the masters.
 - Updated the demo in the examples: extrusion and ligthing have been added.
 - Fixed glcGetFontMap() and glcGetMasterMap() so that their return is not null
   when a character is mapped in the font/master but its Unicode name is not
